aaamedia/mcms/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mcms-to-keycloak
spec:
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: mcms
  podSelector:
    matchLabels:
      app: keycloak
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mcms-to-postgresql
spec:
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app.kubernetes.io/name: mcms
  podSelector:
    matchLabels:
      app.kubernetes.io/name: postgresql
